ENHANCEMENT:SSF-30 - partially finish - fixed broken layout on edit files 404error.html

--- a/admin/css/screen.css
+++ b/admin/css/screen.css
@@ -466,8 +466,17 @@ body.cms-dialog { overflow: auto; background: url("../images/textures/bg_cms_mai
 
 /** -------------------------------------------- Item Edit Form -------------------------------------------- */
 #Form_ItemEditForm .field { width: 100%; }
-#Form_ItemEditForm .field .fieldgroup { height: 240px; float: left; }
+#Form_ItemEditForm .field .fieldgroup { height: 320px; float: left; }
 #Form_ItemEditForm .field .fieldgroup .fieldgroup-field.first { position: relative; margin-left: 0px; }
+#Form_ItemEditForm .field .fieldgroup .fieldgroup-field.first .ss-uploadfield-item { margin: 0; padding: 16px; overflow: auto; }
+#Form_ItemEditForm .field .fieldgroup .fieldgroup-field.first .ss-uploadfield-item .ss-uploadfield-item-preview { height: 96px; line-height: 96px; width: 264px; text-align: center; font-weight: bold; font-size: 21.6px; float: left; overflow: hidden; }
+#Form_ItemEditForm .field .fieldgroup .fieldgroup-field.first .ss-uploadfield-item .ss-uploadfield-item-preview.ss-uploadfield-dropzone { -moz-box-shadow: #9a9a9a 0 0 3px 3px inset; -webkit-box-shadow: #9a9a9a 0 0 3px 3px inset; -o-box-shadow: #9a9a9a 0 0 3px 3px inset; box-shadow: #9a9a9a 0 0 3px 3px inset; border: 2px dashed gray; background: rgba(201, 205, 206, 0.8); }
+#Form_ItemEditForm .field .fieldgroup .fieldgroup-field.first .ss-uploadfield-item .ss-uploadfield-item-name { float: none; display: block; clear: both; padding: 8px 0; }
+#Form_ItemEditForm .field .fieldgroup .fieldgroup-field.first .ss-uploadfield-item .ss-uploadfield-fromcomputer { padding-top: 0px; margin-right: 8px; }
+#Form_ItemEditForm .field .fieldgroup .fieldgroup-field.first .ss-uploadfield-item .ss-uploadfield-fromcomputer span.ui-button-text { padding-left: 28px; }
+#Form_ItemEditForm .field .fieldgroup .fieldgroup-field.first .ss-uploadfield-item .ss-uploadfield-fromcomputer .ss-uploadfield { position: absolute; left: -9999em; }
+#Form_ItemEditForm .field .fieldgroup .fieldgroup-field.first .ss-uploadfield-item .ss-uploadfield-fromfiles { padding-top: 0px; margin: 0; }
+#Form_ItemEditForm .field .fieldgroup .fieldgroup-field.first .ss-uploadfield-item .ss-uploadfield-fromfiles span.ui-button-text { padding-left: 28px; }
 #Form_ItemEditForm .field .fieldgroup .fieldgroup-field { clear: both; width: 500px; margin-left: 420px; }
 #Form_ItemEditForm .field .fieldgroup .fieldgroup-field img { -moz-border-radius: 8px; -webkit-border-radius: 8px; -o-border-radius: 8px; -ms-border-radius: 8px; -khtml-border-radius: 8px; border-radius: 8px; border-width: 3px; border-style: dashed; border-color: #8c99a1; position: absolute; top: 8px; }
 #Form_ItemEditForm .field .fieldgroup .fieldgroup-field label { font-weight: bold; float: left; padding-top: 8px; line-height: 16px; text-shadow: white 1px 1px 0; }
