--- a/admin/scss/_style.scss
+++ b/admin/scss/_style.scss
@@ -1240,9 +1240,55 @@ body.cms-dialog {
 	.field {
 		width:100%;
 		.fieldgroup { 
-			height:$grid-y * 30;
+			height:$grid-y * 40;
 			float:left;
 		 	.fieldgroup-field.first {
+		 		.ss-uploadfield-item {
+					margin: 0;
+					padding: $grid-x * 2;
+					overflow: auto;
+					.ss-uploadfield-item-preview {
+						height: $grid-y * 12;
+						line-height: $grid-y * 12;
+						width: $grid-x * 33;
+						text-align: center;
+						font: {
+							weight:bold;
+							size:$font-base-size * 1.8;
+						}	
+						float: left;
+						overflow: hidden;
+						&.ss-uploadfield-dropzone { 
+							@include box-shadow(lighten($color-medium-separator, 10%) 0 0 3px 3px inset);
+							border: 2px dashed $color-medium-separator;
+							background: $color-light-separator;
+						}
+					}	
+					.ss-uploadfield-item-name {
+						float:none;
+						display:block;
+						clear:both;
+						padding:$grid-y 0;
+					}
+					.ss-uploadfield-fromcomputer {
+						padding-top:0px;
+						margin-right:$grid-x;
+						span.ui-button-text {
+							padding-left:$grid-x * 3.5;
+						}
+						.ss-uploadfield {
+							position:absolute;
+							left:-9999em;
+						}
+					}
+					.ss-uploadfield-fromfiles {
+						padding-top:0px;
+						margin:0;
+						span.ui-button-text {
+							padding-left:$grid-x * 3.5;
+						}
+					}
+				}
 		 		position:relative;
 		 		margin-left:0px;
 		 	}
